--- a/MLspring_campassignment1.ipynb
+++ b/MLspring_campassignment1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmnYGPfNtVWTjCfgSUN/Uf",
+      "authorship_tag": "ABX9TyMTZq8JWEgSVn5Lzbk92sFQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "FfePchAUKGHi"
       },
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "oXAZX9mWfIEf"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "yELIBnshlXb4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
         "id": "9fMz0sf2l5dO",
         "outputId": "91da37c5-404d-4cc0-fac3-a927c57e611d"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -321,7 +321,7 @@
         "id": "1x_TxsQ9mtUT",
         "outputId": "caa20b1c-91fd-41bb-907e-6dcde3635330"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,7 +352,7 @@
       "metadata": {
         "id": "_BedCIgenUBs"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +364,7 @@
       "metadata": {
         "id": "W-BmvW0InZA5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -379,7 +379,7 @@
         "id": "6cfa-49LHOYs",
         "outputId": "e20a9d69-6e8d-46b9-aafc-b9e8b1f91c5d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +415,7 @@
         "id": "w8TljMLEL6pE",
         "outputId": "7e5bb978-c5b9-41ce-fa19-9f4b3b5ae138"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -461,7 +461,7 @@
         "id": "lWVZVeH9MDcE",
         "outputId": "01cdbd11-4a3d-4d03-944d-86f106c15bd0"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -527,19 +527,16 @@
         "      y=y.copy()\n",
         "      X.insert(loc=0,column='base',value=np.full((X.shape[0],1),1))\n",
         "      weight = np.random.rand(X.shape[1])\n",
+        "      epochs = 100\n",
         "      for i in range(5000):\n",
         "        y_pred = np.dot(X.values,weight)\n",
         "        error = y-y_pred\n",
+        "        batch_size = 32\n",
         "        a = random.randint(0,X.shape[0]-1);\n",
-        "        b=  random.randint(0,X.shape[0]-1);\n",
-        "        if a>b:\n",
-        "          temp = a\n",
-        "          a = b\n",
-        "          b = temp\n",
-        "        elif a==b:\n",
-        "          b = b+1\n",
-        "        gradient = -np.dot(X.iloc[a:b,:].values.transpose(),error.iloc[a:b].values)\n",
-        "        weight = weight - self.learning_rate*gradient\n",
+        "        b+=batch_size\n",
+        "        for j in range(epochs):\n",
+        "          gradient = -np.dot(X.iloc[a:b,:].values.transpose(),error.iloc[a:b].values)\n",
+        "          weight = weight - self.learning_rate*gradient\n",
         "      return weight\n",
         "\n",
         "    def predict(self,X,weight):\n",
@@ -554,7 +551,7 @@
       "metadata": {
         "id": "4PfybgzXvxtA"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -569,7 +566,7 @@
       "metadata": {
         "id": "OzhRxJPwfduQ"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -587,7 +584,7 @@
         "id": "BTjwaP81flRa",
         "outputId": "a3599808-541d-4ba1-d93e-aba9eaabbd98"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -611,7 +608,7 @@
         "id": "FRsUBsIsJHod",
         "outputId": "8cc1e4bb-f47b-4378-a925-4b2a7f388f47"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
